--- a/TAMUTemplateSP18.tex
+++ b/TAMUTemplateSP18.tex
@@ -17,6 +17,8 @@
 \documentclass[12pt]{report}
 
 \usepackage{tamuconfig}
+\usepackage{amsmath}
+\usepackage{breqn}
 
 % Most of the packages that set the default settings
 % for the document have moved to the style file
