--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -1241,7 +1241,7 @@ title = {Hardware and Firmware for the CMS Global Calorimeter Trigger}
 	journal = {Journal of Instrumentation},
 }
 @article{PhysRevD.97.075035,
-	title = {Bottom-quark fusion processes at the LHC for probing ${Z}^{\ensuremath{'}}$ models and $B$-meson decay anomalies},
+	title = {Bottom-quark fusion processes at the LHC for probing Z' models and $B$-meson decay anomalies},
 	author = {Abdullah, Mohammad and Dalchenko, Mykhailo and Dutta, Bhaskar and Eusebi, Ricardo and Huang, Peisi and Kamon, Teruki and Rathjens, Denis and Thompson, Adrian},
 	journal = {Phys. Rev. D},
 	volume = {97},
@@ -1254,3 +1254,10 @@ title = {Hardware and Firmware for the CMS Global Calorimeter Trigger}
 	doi = {10.1103/PhysRevD.97.075035},
 	url = {https://link.aps.org/doi/10.1103/PhysRevD.97.075035}
 }
+@misc{cmslumitwiki,
+	collaboration        = "CMS",
+	title         = "{CMS Luminosity Public Results}",
+	year          = "2016",
+	howpublished  = "\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/LumiPublicResults}",
+}
+
