--- a/data/section5.tex
+++ b/data/section5.tex
@@ -466,7 +466,7 @@ Table \ref{tab:systematics_summary} summarizes all of the systematic uncertainti
 		\hline
 		QCD                                               & lnN   & temp          & Scale uncertainty for data-driven QCD prediction \\
 		\hline
-		Luminosity 13 TeV                          & lnN   & temp         & Signal and all backgrounds \\
+		Luminosity 13 TeV                          & lnN   & 2.5         & Signal and all backgrounds \\
 		Jet Energy Scale                                  & shape & 0-20        & Signal and all backgrounds \\
 		Pileup Weight                                     & shape & 0-8         & Signal and all backgrounds \\
 		DeepCSV Weight                                        & shape & 0-17        & Signal and all backgrounds \\
@@ -476,12 +476,10 @@ Table \ref{tab:systematics_summary} summarizes all of the systematic uncertainti
 	\label{tab:systematics_summary}
 \end{sidewaystable}
 
-\subsection{Detector Simulation - Related}
-
-\subsubsection{LHC Luminosity}
+\subsection{LHC Luminosity}
 A flat rate uncertainty of 2.5$\%$ is applied to all of the simulated samples to account for the uncertainty on the LHC luminosity and thus the simulation normalizations\cite{CMS-PAS-LUM-17-001}.
 	 
-\subsubsection{Pileup Weights}
+\subsection{Pileup Weights}
 The necessity of the pileup weights was discussed in Section. The number of pileup interactions in a single bunch crossing is given by
 	 
 \begin{equation}
